[package]
authors = ["Vincent Stakenburg <me@frozendro.id>"]
edition = "2018"
readme = "README.md"
name = "hotas-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
stm32l4xx-hal = { path = "../stm32l4xx-hal", version = "0.5.0", features = ["rt", "stm32l4x2", "stm32-usbd"] }
stm32l4 = { version = "0.9.0", features = ["rt", "stm32l4x2"] }
stm32-usbd = "0.5.1"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
usbd-hid = "0.3.7"
usbd-hid-macros = "0.2.6"

[[bin]]
name = "hotas-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
